[gd_scene load_steps=7 format=3 uid="uid://deqbhngbde10b"]

[ext_resource type="Script" uid="uid://bbu4avbxp7quo" path="res://scripts/telas/tela_controles.gd" id="1_vefb0"]
[ext_resource type="LabelSettings" uid="uid://da58mpv4dmmmx" path="res://tres/titulo.tres" id="2_vefb0"]
[ext_resource type="Theme" uid="uid://cgeeiqcn1fcru" path="res://tres/botao.tres" id="3_bn5a1"]
[ext_resource type="PackedScene" uid="uid://bwbh4y5s1ai4q" path="res://scenes/button.tscn" id="3_vefb0"]
[ext_resource type="AudioStream" uid="uid://diwrdjpmjmbve" path="res://assets/audios/mouse_click.mp3" id="4_l580m"]
[ext_resource type="AudioStream" uid="uid://c6av2a7imlnes" path="res://assets/audios/mouse_hover.mp3" id="5_mx0pd"]

[node name="TelaControles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vefb0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="Titulo" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 27.0
offset_right = 937.0
offset_bottom = 164.0
scale = Vector2(0.8, 0.8)
text = "CONTROLES"
label_settings = ExtResource("2_vefb0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -44.0
offset_right = 300.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 100
columns = 2

[node name="Esquerda" parent="MarginContainer/GridContainer" instance=ExtResource("3_vefb0")]
layout_mode = 2
action_name = "esquerda"

[node name="Direita" parent="MarginContainer/GridContainer" instance=ExtResource("3_vefb0")]
layout_mode = 2
action_name = "direita"

[node name="Atirar" parent="MarginContainer/GridContainer" instance=ExtResource("3_vefb0")]
layout_mode = 2
action_name = "atirar"

[node name="Pause" parent="MarginContainer/GridContainer" instance=ExtResource("3_vefb0")]
layout_mode = 2
action_name = "pause"

[node name="Sair" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 580.0
offset_right = 135.0
offset_bottom = 645.0
scale = Vector2(0.8, 0.8)
theme = ExtResource("3_bn5a1")
text = "Sair"

[node name="Jogar" type="Button" parent="."]
layout_mode = 0
offset_left = 884.0
offset_top = 587.0
offset_right = 1208.0
offset_bottom = 646.0
scale = Vector2(0.8, 0.8)
theme = ExtResource("3_bn5a1")
text = "Jogar"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_l580m")
bus = &"SFX"

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_mx0pd")
bus = &"SFX"

[connection signal="mouse_entered" from="Sair" to="." method="_on_sair_mouse_entered"]
[connection signal="pressed" from="Sair" to="." method="_on_sair_pressed"]
[connection signal="mouse_entered" from="Jogar" to="." method="_on_jogar_mouse_entered"]
[connection signal="pressed" from="Jogar" to="." method="_on_jogar_pressed"]
